# discrimin-ant

./: Cargo.toml  README.md  clippy.toml
discrimin-ant/: Cargo.toml
discrimin-ant-proc/: Cargo.toml
discrimin-ant-proc/src/: discriminant.rs  lib.rs
discrimin-ant-proc/src/discriminant/: tests.rs
discrimin-ant-proc/src/discriminant/tests/: complex_u_enum.rs  simple_fieldless_enum.rs  simple_no_discriminant_enum.rs  simple_signed_fieldless_enum.rs
discrimin-ant-proc/tests/: tests.rs
discrimin-ant/src/: lib.rs
