[workspace]
members = ["discrimin-ant", "discrimin-ant-proc"]
resolver = "3"

[workspace.dependencies]
num-traits = { version = "0.2.19", features = ["i128"] }
syn = { version = "2.0.101", features = ["full"] }

[workspace.lints.rust]
# See also https://doc.rust-lang.org/rustc/lints/index.html
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# See also https://rust-lang.github.io/rust-clippy/master/index.html
# Lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Individual lints
alloc_instead_of_core = "warn"
arithmetic_side_effects = "warn"
cargo_common_metadata = "warn"
cfg_not_test = "deny"
dbg_macro = "warn"
default_trait_access = "allow"
empty_drop = "warn"
exit = "deny"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
host_endian_bytes = "warn"
infinite_loop = "warn"
items_after_statements = "allow"
lossy_float_literal = "deny"
missing_docs_in_private_items = "warn"
module_name_repetitions = "warn"
multiple_crate_versions = "warn"
must_use_candidate = "allow"
option_if_let_else = "warn"
unwrap_used = "warn"
